--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Mike van Rossum <mike@mvr.me>",
   "dependencies": {
     "@slack/client": "^3.10.0",
+    "amqplib": "^0.5.2",
     "async": "2.1.2",
     "binance": "^1.3.1",
     "bitcoin-co-id-update": "0.0.2",
@@ -23,13 +24,13 @@
     "bitfinex-api-node": "^1.2.0",
     "bitstamp": "^1.0.3",
     "bitx": "^1.5.0",
-    "btc-china-fork": "0.0.6",
     "btc-markets": "0.0.10",
     "cexio": "0.0.x",
     "co-fs": "^1.2.0",
     "coinfalcon": "^1.0.3",
     "coingi": "^1.0.7",
     "commander": "^2.13.0",
+    "dotenv": "^5.0.1",
     "gdax": "^0.4.2",
     "gekko": "0.0.9",
     "gemini-exchange-coffee-api": "2.0.6",
