--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "lakebtc_nodejs": "0.1.x",
     "lodash": "2.x",
     "moment": "^2.20.1",
+    "node-fetch": "^2.1.2",
+    "node-ipc": "^9.1.1",
     "node-wex": "^1.0.3",
     "node.bittrex.api": "^0.4.3",
     "okcoin-china": "0.0.7",
@@ -57,6 +59,8 @@
     "relieve": "^2.1.3",
     "retry": "^0.10.1",
     "semver": "5.4.1",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "sqlite3": "^3.1.13",
     "stats-lite": "^2.0.4",
     "tiny-promisify": "^0.1.1",
