--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "kraken-api-es5": "^1.0.0",
     "lakebtc_nodejs": "0.1.x",
     "lodash": "2.x",
+    "logzio-nodejs": "^0.4.11",
     "moment": "^2.20.1",
     "node-fetch": "^2.1.2",
     "node-ipc": "^9.1.1",
@@ -56,6 +57,7 @@
     "prompt-lite": "0.1.1",
     "pushbullet": "1.4.3",
     "quadrigacx": "0.0.7",
+    "raven": "^2.6.2",
     "relieve": "^2.1.3",
     "retry": "^0.10.1",
     "semver": "5.4.1",
@@ -63,9 +65,13 @@
     "socket.io-client": "^2.1.1",
     "sqlite3": "^3.1.13",
     "stats-lite": "^2.0.4",
+    "talib": "^1.0.5",
     "tiny-promisify": "^0.1.1",
     "toml": "^2.3.0",
+    "tulind": "^0.8.10",
     "twitter": "^1.7.1",
+    "winston": "^3.0.0",
+    "winston-logzio": "^1.0.8",
     "zaif.jp": "^0.1.4"
   },
   "devDependencies": {
