make multireader and leacher with config

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "coinfalcon": "^1.0.3",
     "coingi": "^1.0.7",
     "commander": "^2.13.0",
+    "convnetjs": "^0.3.0",
     "dotenv": "^5.0.1",
     "gdax": "^0.4.2",
     "gekko": "0.0.9",
@@ -45,6 +46,7 @@
     "lakebtc_nodejs": "0.1.x",
     "lodash": "2.x",
     "logzio-nodejs": "^0.4.11",
+    "mathjs": "^5.0.0",
     "moment": "^2.20.1",
     "node-fetch": "^2.1.2",
     "node-ipc": "^9.1.1",
