--- a/config/strategies/TMA.toml
+++ b/config/strategies/TMA.toml
@@ -1,6 +1,6 @@
-#short = 5..10:1
-#medium = 20..35:1
-#long = 90..110:2
+#short = "5..10:1"
+#medium = "20..35:1"
+#long = "90..110:2"
 
 long = 96
 short = 7
