--- a/config/strategies/MACD.toml
+++ b/config/strategies/MACD.toml
@@ -3,11 +3,11 @@
 short = 18
 long = 21
 signal=10
-#signal = 9..15:1
+#signal = "9..15:1"
 
 [thresholds]
-down = -0.025
-up = 0.025
+down = -0.96
+up = 0.2
 persistence = 1
 
 #0.045|1|-0.015
