--- a/config/strategies/tulip-macd.toml
+++ b/config/strategies/tulip-macd.toml
@@ -1,8 +1,12 @@
 [parameters]
-optInFastPeriod = 10
+optInFastPeriod = 18
 optInSlowPeriod = 21
-optInSignalPeriod = 9
+optInSignalPeriod = 10
+
+#short = 18
+#long = 21
+#signal=10
 
 [thresholds]
-down = -0.025
-up = 0.025
+down = -0.96
+up = 0.2
