--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ api-keys.js
 nbproject
 *.sublime-project
 *.sublime-workspace
+*.vc.*
 
 #env
 .env
@@ -40,6 +41,7 @@ dwsync.xml
 
 # Folders & files to ignore
 tmp
+reports
 node_modules
 candles.csv
 cexio.db
