--- a/config/strategies/MACD.toml
+++ b/config/strategies/MACD.toml
@@ -1,3 +1,4 @@
+[macd.parameters]
 #short = "10..20:2"
 #long = "21..61:10"
 short = 18
@@ -5,9 +6,12 @@ long = 21
 signal=10
 #signal = "9..15:1"
 
-[thresholds]
+[macd.thresholds]
 down = -0.96
 up = 0.2
 persistence = 1
 
 #0.045|1|-0.015
+[macd.chart]
+showInExtraWindow = true
+type="macd"
