--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "logzio-nodejs": "^0.4.11",
     "mathjs": "^5.0.0",
     "moment": "^2.20.1",
-    "mysql": "^2.15.0",
+    "mysql2": "^1.6.1",
     "node-fetch": "^2.1.2",
     "node-ipc": "^9.1.1",
     "node-wex": "^1.0.3",
